--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -17,6 +17,15 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .s-intro
+    background-image: url('../img/bg-intro.png')
+    +bg-cover
+  .intro-container
+    background-color: transparent
+    &:before
+      background-image: none
+
   .top-line
     .middle
       flex-grow: inherit
@@ -35,6 +44,12 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+  .intro-container
+    h1
+      font-size: 28px
+    h2
+      font-size: 16px
+
   .top-line
     flex-wrap: wrap
     .middle
@@ -44,6 +59,15 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .intro-container
+    line-height: 1.3
+    padding: 90px 0
+    h1
+      margin-bottom: 15px
+    h2
+      font-size: 16px
+
   .top-line
     .right
       font-size: 13px
