section servlist complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -60,6 +60,15 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .s-servlist
+    padding-top: 50px
+
+  .servlist-item
+    &-title
+      padding: 20px 15px
+    &-content
+      padding: 0 15px 30px
+
   .intro-container
     line-height: 1.3
     padding: 90px 0
@@ -93,8 +102,6 @@
       margin: 0 5px
       a
         font-size: 13px
-
-
 /*==========  Mobile First  ==========*/
 
 // ≤480px
