section about complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -81,4 +81,11 @@ ul
   &:hover
     background-color: darken($accent, 10%)
 
+.section-title
+  font-size: 30px
+  margin-bottom: 30px
+  text-align: center
+  line-height: 1.2
+  position: relative
+
 
