--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -18,6 +18,14 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .s-about
+    padding-bottom: 350px
+
+  .about-img
+    width: 100%
+    top: auto
+    bottom: 0
+
   .s-intro
     background-image: url('../img/bg-intro.png')
     +bg-cover
@@ -59,6 +67,11 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .s-about
+    font-size: 16px
+  .about-img
+    background-position: -70px center
 
   .s-servlist
     padding-top: 50px
