--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,6 +9,8 @@
 @import layout/s-intro
 @import layout/s-servlist
 @import layout/s-about
+@import layout/s-why
+@import layout/s-how
 @import layout/footer
 
 
