section brands complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -71,6 +71,10 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .s-brands
+    padding-top: 0
+    padding-bottom: 60px
+
   .how-wrap
     border: none
     .container
