section consult complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -118,6 +118,17 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .brands-slider
+    .owl-nav
+      button.owl-prev
+        left: -12px
+      button.owl-next
+        right: -12px
+
+  .s-consult
+    padding: 75px 0
+    font-size: 16px
+
   .s-why
     padding-bottom: 15px
 
