--- a/app/sass/layout/_s-servlist.sass
+++ b/app/sass/layout/_s-servlist.sass
@@ -28,7 +28,7 @@
 .servlists
   li>a
     display: block
-    padding: 25px 0 25px 40px
+    padding: 25px 15px 25px 40px
     +mt(.3s)
     color: $text
     position: relative
