--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -6,6 +6,9 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .foot-contacts
+    padding-left: 0
+
   .s-why
     padding-top: 0
 
@@ -24,6 +27,9 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .foot-contacts
+    margin-bottom: 30px
 
   .how-item
     margin-right: 25px
@@ -117,6 +123,11 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .main-foot
+    padding: 50px 0
+    h3, h4, li
+      text-align: center
 
   .brands-slider
     .owl-nav
