page-catalog.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -124,6 +124,14 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .s-cat
+    padding: 45px 0 15px
+    .section-title
+      text-align: center
+
+  .breadcrumbs
+    display: none
+
   .main-foot
     padding: 50px 0
     h3, h4, li
