--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,8 @@
 @import layout/s-how
 @import layout/s-brands
 @import layout/s-consult
+@import layout/breadcrumbs
+@import layout/s-cat
 @import layout/footer
 
 
