page-about.html and page-logistic.html complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -170,7 +170,12 @@ ul
   90%, 100%
     transform: perspective(136px) rotateY(180deg)
     opacity: 0
-
 //end preloader
+
+.pt-15
+  padding-top: 15px!important
+
+.pb-85
+  padding-bottom: 85px!important
 
 
