--- a/app/sass/layout/_s-why.sass
+++ b/app/sass/layout/_s-why.sass
@@ -15,3 +15,8 @@
     font-size: 18px
     font-weight: 700
     line-height: 1.2
+    &>span
+      font-weight: 400
+      display: block
+      font-size: 16px
+      margin-top: 3px
