--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,9 @@
 @import layout/s-consult
 @import layout/breadcrumbs
 @import layout/s-cat
+@import layout/s-service
+@import layout/s-intro-about
+@import layout/s-text
 @import layout/footer
 
 
