page-ved.html complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -87,6 +87,12 @@ ul
   text-align: center
   line-height: 1.2
   position: relative
+  span
+    display: block
+    color: $accent
+    font-size: 12px
+    text-transform: uppercase
+    margin-top: 8px
 
 
 .preloader
