--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,6 +18,8 @@
 @import layout/s-service
 @import layout/s-intro-about
 @import layout/s-text
+@import layout/s-duty
+@import layout/s-objects
 @import layout/footer
 
 
