--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -6,6 +6,14 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .duty-wrap
+    flex-wrap: wrap
+
+  .duty-item
+    width: calc(50% - 15px)
+    &:nth-child(2)
+      margin-right: 0
+
   .s-text
     padding: 45px 0
 
@@ -90,6 +98,9 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .duty-item
+    width: 100%
+
   .s-brands
     padding-top: 0
     padding-bottom: 60px
@@ -136,6 +147,9 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .object-item-title
+    font-size: 16px
 
   .s-text
     font-size: 16px
