--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -184,4 +184,23 @@ ul
 .pb-85
   padding-bottom: 85px!important
 
+.search-form
+  display: flex
+  justify-content: space-between
+
+form
+  label
+    display: block
+  input
+    display: block
+    width: 100%
+    font-size: 14px
+    line-height: 1
+    padding: 17px 20px
+    color: $text
+    border: 1px solid #b8b8b8
+    &::placeholder
+      color: $text
+      opacity: .5
+
 
