--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -6,6 +6,14 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .s-filter
+    .search-form
+      float: none
+      margin-bottom: 30px
+
+  .products-wrap
+    margin-top: 10px
+
   .duty-wrap
     flex-wrap: wrap
 
@@ -40,6 +48,20 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .product-item
+    flex-wrap: wrap
+    &-img
+      margin-left: auto
+      margin-right: auto
+    &-title
+      padding-right: 0
+  .product-half
+    width: 100%
+    &.product-half-left
+      order: 2
+    &.product-half-right
+      order: 1
 
   .s-intro-about
     background-position: -350px center
@@ -98,6 +120,15 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .sidebar
+    margin-bottom: 50px
+  .pagination
+    width: 100%
+    text-align: center
+
+  .product-item-img
+    margin-bottom: 20px
+
   .duty-item
     width: 100%
 
@@ -147,6 +178,20 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .product-desc
+    padding-bottom: 45px
+    font-size: 16px
+
+  .s-filter
+    padding-top: 45px
+    .search-form
+      width: 100%
+      .btn
+        width: 80px
+        min-width: auto
+      label
+        width: calc(100% - 80px)
 
   .object-item-title
     font-size: 16px
