--- a/app/sass/layout/_footer.sass
+++ b/app/sass/layout/_footer.sass
@@ -48,9 +48,73 @@
     margin-bottom: 3px
 
 
-#map
+//#map
+//  height: 300px
+//  border-radius: 10px
+//  background-color: #eee
+//  margin-top: 30px
+//  overflow: hidden
+
+
+.map-wrap
   height: 300px
   border-radius: 10px
   background-color: #eee
   margin-top: 30px
   overflow: hidden
+
+.map-wrap
+  position: relative
+
+#map
+  height: 100%
+  position: relative
+  background-image: url('../img/bg-map.jpg')
+  +bg-cover
+
+.loader
+  position: absolute
+  top: 0
+  left: 0
+  box-sizing: border-box
+  width: 100%
+  height: 100%
+  overflow: hidden
+  color: #000000
+  transition: opacity .7s ease
+  opacity: 0
+  background-color: rgba(0,0,0,.55)
+  z-index: -2
+
+.loader:after,
+.loader:before
+  box-sizing: border-box
+
+.loader.is-active
+  top: 0
+  opacity: 1
+  z-index: 2
+
+.loader-default:after
+  position: absolute
+  top: calc(50% - 24px)
+  left: calc(50% - 24px)
+  width: 48px
+  height: 48px
+  content: ''
+  animation: rotation 1s linear infinite
+  border: solid 8px #ffffff
+  border-left-color: transparent
+  border-radius: 50%
+
+@keyframes rotation
+  from
+    transform: rotate(0)
+  to
+    transform: rotate(359deg)
+
+@keyframes blink
+  from
+    opacity: .5
+  to
+    opacity: 1
