--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -20,6 +20,8 @@
 @import layout/s-text
 @import layout/s-duty
 @import layout/s-objects
+@import layout/s-filter
+@import layout/sidebar
 @import layout/footer
 
 
